getting_started/test_files/syntax_errors/BadForHeader.cpm
main(): int {
  for (volatile i: int := 0 i < 3, i := i + 1) {
    print(i)
  }
  return 0
}
